correct repetition in about section and apply align property to paragraphs

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 p {
-    text-align: left;
+    text-align: justify;
 }
 
 /* --- HEADER --- */
@@ -263,8 +263,6 @@ footer a {
     margin: 5px auto;
     color: #FBEFD2;
 }
-
-
 
 @media screen and (min-width: 672px) {
 
